--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Love Runnning</h1>
+            <h1 id="logo">Love Runnning</h1>
         </a>
         <nav>
             <ul>
